---
source: src/expr/src/scalar/func/impls/byte.rs
expression: "#[sqlfunc(\n    sqlname = \"bytea_to_text\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastStringToBytes)\n)]\nfn cast_bytes_to_string(a: &[u8]) -> String {\n    let mut buf = String::new();\n    strconv::format_bytes(&mut buf, a);\n    buf\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastBytesToString;
impl crate::func::EagerUnaryFunc for CastBytesToString {
    type Input<'a> = &'a [u8];
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_bytes_to_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToBytes)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastBytesToString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("bytea_to_text")
    }
}
fn cast_bytes_to_string(a: &[u8]) -> String {
    let mut buf = String::new();
    strconv::format_bytes(&mut buf, a);
    buf
}
